got add room working with vinits changes

--- a/client/app/rooms/add.room/add.room.html
+++ b/client/app/rooms/add.room/add.room.html
@@ -405,8 +405,8 @@
 
         <div class="row post-padding">
           <div class="col-xs-12 col-sm-12">
-            <!--<button class="btn-rented-medium primary pull-right" ng-disabled="addNewRoomForm.$invalid ">Save</button> &lt;!&ndash; && addNewRoomForm.$dirty&ndash;&gt;-->
-            <button class="btn-rented-medium primary pull-right" >Save</button> <!-- This is for testing the address save issue-->
+            <button class="btn-rented-medium primary pull-right" ng-disabled="addNewRoomForm.$invalid ">Save</button>
+            <!--<button class="btn-rented-medium primary pull-right" >Save</button> &lt;!&ndash; This is for testing the address save issue&ndash;&gt;-->
           </div>
         </div>
 
