added time fields to room queries

--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -419,9 +419,9 @@
 
                 <h3 class="pull-left">Property Address</h3><br>
                 <p class="pull-left">
-                  {{vm.property.streetAddress.streetNumeric}} {{vm.property.streetAddress.streetAddress}}
-                  {{vm.property.streetAddress.apt}}
-                  {{vm.property.streetAddress.city}}, {{vvm.property.streetAddress.state}} {{vm.property.streetAddress.zip}}
+                  {{vm.relatedPropertyId.streetNumeric}} {{vm.relatedPropertyId.streetAddress}}
+                  {{vm.relatedPropertyId.apt}}
+                  {{vm.relatedPropertyId.city}}, {{vm.relatedPropertyId.state}} {{vm.relatedPropertyId.zip}}
                 </p>
 
               </div>
