--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper">
   <div class="container lookings">
-    <div class="row">
+    <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="page-header">
         <h2> Looking </h2>
       </div>
