Changes for room detail and address style for edit room

--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -419,8 +419,9 @@
 
                 <h3 class="pull-left">Property Address</h3><br>
                 <p class="pull-left">
-                  {{vm.room.relatedPropertyId.streetNumeric}} {{vm.room.relatedPropertyId.streetAddress}}
-                  {{vm.room.relatedPropertyId.apt}}
+                  <br>
+                  {{vm.room.relatedPropertyId.streetNumeric}} {{vm.room.relatedPropertyId.streetAddress}} {{vm.room.relatedPropertyId.apt}}
+                  <br>
                   {{vm.room.relatedPropertyId.city}}, {{vm.room.relatedPropertyId.state}} {{vm.room.relatedPropertyId.zip}}
                 </p>
 
@@ -430,7 +431,7 @@
 
             <!-- Add property pictures -->
 
-            <div class="row">
+            <div class="row property-pictures">
 
               <div class="col-xs-12 col-sm-12">
 
