Removed picture capability for Edit Room. Added new fields in room Detail. Removed social login for Sign in and Sign up

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,13 +1,13 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
   <section class="login-box white-box">
-    <h2 class="heading">Login with...</h2>
+    <h2 class="heading">Sign In</h2>
 
-    <article class="social">
-      <a class="link email"><span>Email</span></a>
-      <a class="link fb" ng-click="loginOauth('facebook')"><span>Facebook</span></a>
-      <a class="link google" ng-click="loginOauth('google')"><span>Google+</span></a>
-    </article>
+    <!--<article class="social">-->
+      <!--<a class="link email"><span>Email</span></a>-->
+      <!--<a class="link fb" ng-click="loginOauth('facebook')"><span>Facebook</span></a>-->
+      <!--<a class="link google" ng-click="loginOauth('google')"><span>Google+</span></a>-->
+    <!--</article>-->
 
     <form class="main-form" name="form" ng-submit="login(form)" novalidate>
 
