--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,13 +1,13 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
   <section class="login-box white-box">
-    <h2 class="heading">Sign up with...</h2>
+    <h2 class="heading">Sign up for free</h2>
 
-    <article class="social">
-      <a class="link email"><span>Email</span></a>
-      <a class="link fb" ng-click="signup.loginOauth('facebook')"><span>Facebook</span></a>
-      <a class="link google" ng-click="signup.loginOauth('google')"><span>Google+</span></a>
-    </article>
+    <!--<article class="social">-->
+      <!--<a class="link email"><span>Email</span></a>-->
+      <!--<a class="link fb" ng-click="signup.loginOauth('facebook')"><span>Facebook</span></a>-->
+      <!--<a class="link google" ng-click="signup.loginOauth('google')"><span>Google+</span></a>-->
+    <!--</article>-->
 
     <form class="main-form" name="form" ng-submit="signup.register(form)" novalidate>
 
@@ -33,12 +33,12 @@
         <input type="password" ng-model="signup.user.password" ng-minlength="3" placeholder="Minimum 3 characters required" required>
       </label>
 
-      <label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
-        <input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" ui-validate=" '$value==signup.user.password' "
-               ui-validate-watch=" 'signup.user.password' " required>
-        <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please provide valid password</p>
-        <p class="help-block" ng-show="form.password.$error && signup.submitted && !form.password.$error.required">Password's dont match</p>
-      </label>
+      <!--<label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">-->
+        <!--<input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" ui-validate=" '$value==signup.user.password' "-->
+               <!--ui-validate-watch=" 'signup.user.password' " required>-->
+        <!--<p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please provide valid password</p>-->
+        <!--<p class="help-block" ng-show="form.password.$error && signup.submitted && !form.password.$error.required">Password's dont match</p>-->
+      <!--</label>-->
 
       <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
       <p class="help-block">{{ signup.errors.other }}</p>
