--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -70,23 +70,14 @@
 
         <div class="row">
 
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-            <a class="contact-bubble-email" href="mailto:someone@example.com?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>
+            <a class="contact-bubble-email pull-right" href="mailto:someone@example.com?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>
+
+            <!--<a class="contact-bubble-email" href="" target="_top"><i class="fa fa-facebook fa-lg"></i></a>-->
+            <!-- Facebook link commented out for now -->
 
           </div>
-
-          <!--<div class="col-sm-1 col-md-2 col-xs-6 col-lg-2 col-sm-offset-8">-->
-            <!--<div class="contact-bubble-email">-->
-              <!--<a href="mailto:someone@example.com?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>-->
-            <!--</div>-->
-          <!--</div>-->
-
-          <!--<div class="col-sm-1 col-md-2 col-xs-6 col-lg-2">-->
-            <!--<div class="contact-bubble-email">-->
-              <!--<a href="mailto:someone@example.com?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>-->
-            <!--</div>-->
-          <!--</div>-->
 
         </div>
 
@@ -119,7 +110,7 @@
 
             <dl>
 
-              <dt ng-show="room.roomDetail.roomDetails.securityDeposit"> Security Deposit: </dt>
+              <dt ng-show="room.roomDetail.roomDetails.securityDeposit">Security Deposit:&nbsp;&nbsp;</dt>
               <dd ng-show="room.roomDetail.roomDetails.securityDeposit">{{room.roomDetail.roomDetails.securityDeposit | currency}}</dd>
 
               <dt>Lease Terms:&nbsp;&nbsp;</dt>
@@ -137,17 +128,20 @@
 
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-            <dt>Parking: </dt>
-            <dd>{{room.roomDetail.roomDetails.parkingAvailable | boolean}}</dd>
+            <dl>
+              <dt>Parking Available:&nbsp;&nbsp;</dt>
+              <dd>{{room.roomDetail.roomDetails.parkingAvailable | boolean}}</dd>
 
-            <dt>Furnished:</dt>
-            <dd>{{room.roomDetail.roomDetails.furnished | boolean}}</dd>
+              <dt>Furnished:&nbsp;&nbsp;</dt>
+              <dd>{{room.roomDetail.roomDetails.furnished | boolean}}</dd>
 
-            <dt>Smoking Allowed: </dt>
-            <dd>{{room.roomDetail.roomDetails.smokingAllowed | boolean}}</dd>
+              <dt>Smoking Allowed:&nbsp;&nbsp;</dt>
+              <dd>{{room.roomDetail.roomDetails.smokingAllowed | boolean}}</dd>
 
-            <dt>Unit area: </dt>
-            <dd>{{room.roomDetail.propertyDetails.livingAreaSqFt}} square feet</dd>
+              <dt>Gender preference:&nbsp;&nbsp;</dt>
+              <dd>{{room.roomDetail.roomDetails.gender}}</dd>
+            </dl>
+
           </div>
         </dl>
 
