--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -5,12 +5,12 @@
         <h2> Looking </h2>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <slick dots="true" class="slider row" init-onload="true" data="looking.lookings" slides-to-show="4" slides-to-scroll="4" >
+      <slick dots="true" class="slider row" init-onload="true" data="looking.lookings" slides-to-show="4" slides-to-scroll="4" ng-if="looking.lookings.length">
           <div  ng-if="look.relatedUserId.id!=looking.me.id" class="col-xs-12 col-sm-6 col-md-3 col-lg-3 looking" ng-repeat="look in looking.lookings">
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
               <div class="flipper">
                 <div class="front white-box">
-                  <div class="picture">
+                  <div class="center-image">
                     <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle">
                     <i ng-if="!look.relatedUserId.profileImage" class="fa fa-user" style="font-size:100px"></i>
                   </div>
