--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -4,7 +4,7 @@
 <!-- Main wrapper class - responsible for page styling -->
 
 <div class="main-wrapper">
-  <div class="container">
+  <div class="container my-profile">
     <div class="row">
       <div class="page-header">
         <h2>Edit Room</h2>
@@ -319,7 +319,7 @@
 
             <div class="row post-padding">
               <div class="col-xs-10 col-sm-8 col-xs-offset-2 col-sm-offset-2 input-post">
-                <textarea required name="roomDescription" id="roomDescription" cols="60" rows="10" ng-model="vm.room.description"  class="form-control" placeholder="Enter room description"></textarea>
+                <textarea required name="roomDescription" id="roomDescription" cols="60" rows="13" ng-model="vm.room.description"  class="form-control" placeholder="Enter room description" ></textarea>
               </div>
             </div>
 
@@ -339,34 +339,34 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <div class="page-header">
             <h2> Roommates </h2>
-            <a class="bubble edit-profile" ng-click="myProfile.toggleRoommatesAddon()">
-              <i class="fa fa-plus" ng-hide="myProfile.showRoommatesAddonButtons"></i>
-              <i class="fa fa-minus" ng-show="myProfile.showRoommatesAddonButtons"></i>
+            <a class="bubble edit-profile" ng-click="vm.toggleRoommatesAddon()">
+              <i class="fa fa-plus" ng-hide="vm.showRoommatesAddonButtons"></i>
+              <i class="fa fa-minus" ng-show="vm.showRoommatesAddonButtons"></i>
             </a>
           </div>
           <div class="white-box roommates">
 
-            <div ng-show='myProfile.showRoommatesAddonButtons' class="text-center">
-              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddRoommate()">
+            <div ng-show='vm.showRoommatesAddonButtons' class="text-center">
+              <a class="btn btn-primary btn-half-block" ng-click="vm.toggleAddRoommate()">
                 <i class="fa fa-plus"></i>
                 Add Roommate
               </a>
-              <a class="btn btn-secondary btn-half-block" ng-click="myProfile.toggleInviteRoomate()">
+              <a class="btn btn-secondary btn-half-block" ng-click="vm.toggleInviteRoomate()">
                 <i class="fa fa-envelope"></i>
                 Invite Roommate
               </a>
               <hr>
             </div>
 
-            <div ng-show="myProfile.showAddRoommate">
-              <a class="bubble cancel" ng-click="myProfile.cancelRoommateAddAddon()"><i class="fa fa-close"></i></a>
+            <div ng-show="vm.showAddRoommate">
+              <a class="bubble cancel" ng-click="vm.cancelRoommateAddAddon()"><i class="fa fa-close"></i></a>
               <h3>Search for your Roommate using by email. </h3>
 
               <angucomplete-alt id="members"
                                 placeholder="Search for roommate"
                                 pause="400"
                                 selected-object="addNewRoommate"
-                                local-data="myProfile.users.data"
+                                local-data="vm.users.data"
                                 search-fields="email"
                                 title-field="firstname,lastname"
                                 description-field="email"
@@ -378,13 +378,13 @@
 
 
             </div>
-            <h2 class="no-roommate" ng-hide="myProfile.showAddRoommate || myProfile.roommates.length > 0">
+            <h2 class="no-roommate" ng-hide="vm.showAddRoommate || vm.roommates.length > 0">
               You don't have any roommate yet.
               <small>
-                <a href="" ng-click="myProfile.toggleAddRoommate()">Click here</a> to find and add your roommates.
+                <a href="" ng-click="vm.toggleAddRoommate()">Click here</a> to find and add your roommates.
               </small>
             </h2>
-            <div class="row roommate" ng-repeat="roommate in myProfile.roommates">
+            <div class="row roommate" ng-repeat="roommate in vm.roommates">
               <div class="col-xs-2">
                 <div class="picture">
                   <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle">
@@ -400,7 +400,7 @@
                 <span class="city" ng-if="!roommate.relatedRoommateId.addresshistoryUsers.length">User didn't provide address data</span>
               </div>
               <div class="actions col-xs-4">
-                <a class="bubble remove" ng-click="myProfile.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
+                <a class="bubble remove" ng-click="vm.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
               </div>
             </div>
 
@@ -422,13 +422,71 @@
               <div class="col-xs-12 col-sm-12">
 
                 <!--<h3 class="pull-left">Property Address</h3><br>-->
-                <p class="pull-left">
-                  {{vm.room.relatedPropertyId.streetNumeric}} {{vm.room.relatedPropertyId.streetAddress}} {{vm.room.relatedPropertyId.apt}}
-                  <br>
-                  {{vm.room.relatedPropertyId.city}}, {{vm.room.relatedPropertyId.state}} {{vm.room.relatedPropertyId.zip}}
-                  <br><br>
-                  Note: address is not editable.
-                </p>
+                <!--<p class="pull-left">-->
+                  <!--{{vm.room.relatedPropertyId.streetNumeric}} {{vm.room.relatedPropertyId.streetAddress}} {{vm.room.relatedPropertyId.apt}}-->
+                  <!--<br>-->
+                  <!--{{vm.room.relatedPropertyId.city}}, {{vm.room.relatedPropertyId.state}} {{vm.room.relatedPropertyId.zip}}-->
+                  <!--<br><br>-->
+                  <!--Note: address is not editable.-->
+                <!--</p>-->
+               <div class="row">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>Street name:</dd>
+                  </div>
+                 <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.streetAddress}}</dt>
+                 </div>
+              </div>
+                <br/>
+
+                <div class="row">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>Street number:</dd>
+                  </div>
+                  <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.streetNumeric}}</dt>
+                  </div>
+                </div>
+                <br/>
+
+                <div class="row" ng-if="vm.room.relatedPropertyId.apt">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>Apt:</dd>
+                  </div>
+                  <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.apt}}</dt>
+                  </div>
+                </div>
+                <br ng-if="vm.room.relatedPropertyId.apt"/>
+
+                <div class="row">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>City:</dd>
+                  </div>
+                  <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.city}}</dt>
+                  </div>
+                </div>
+                <br/>
+
+                <div class="row">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>Zip</dd>
+                  </div>
+                  <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.zip}}</dt>
+                  </div>
+                </div>
+                <br/>
+
+                <div class="row">
+                  <div class="col-xs-3 col-sm-3">
+                <dd>State</dd>
+                  </div>
+                  <div class="col-xs-6 col-sm-6">
+                <dt>{{vm.room.relatedPropertyId.state}}</dt>
+                  </div>
+                </div>
 
               </div>
 
